--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+        args: ['--maxkb=5000'] # 5 MB
 
   # Keep notebooks clean of outputs
   - repo: https://github.com/kynan/nbstripout
