--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "sentence-transformers>=3.0.0",
     "scikit-learn>=1.4.0",
     "ollama>=0.1.5",
+    "pytest>=7.0.0",
 ]
 
 [project.scripts]
